--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,21 @@ body {
     background-color: #464646;
 }
 
+#bg {
+    position: fixed;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    /*background-image: url("http://webneel.com/wallpaper/sites/default/files/images/05-2014/6-sunrise.preview.jpg");*/
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: -1;
+}
+
+
 .background-overlay.show {
     opacity: 1;
 }
